# astrbot_plugin_f1_notifier

./: CHANGELOG.md  GEMINI.md  README.md  _conf_schema.json  _f1_api.py  _formatter.py  _models.py  _scheduler.py  main.py  metadata.yaml  pyproject.toml  requirements.txt
src/astrbot_plugin_f1_notifier/: __init__.py  api.py  formatter.py  image_renderer.py  models.py  scheduler.py
tests/: conftest.py  test_fixes.py
