[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "astrbot-plugin-f1-notifier"
version = "1.0.2"
description = "F1赛事推送与查询 AstrBot 插件"
authors = [{name = "MareDevi"}]
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
